--- a/client/scss/partials/cards.scss
+++ b/client/scss/partials/cards.scss
@@ -10,6 +10,9 @@
 	a {
 		color: #02779e;
 		font-size: 0.6rem;
+		&:hover {
+			background-color: yellow;
+		}
 	}
 	@include respond-to(print) {
 		padding: 0rem;
